--- a/package.json
+++ b/package.json
@@ -6,18 +6,17 @@
   "module": "es/index.js",
   "types": "es/index.d.ts",
   "scripts": {
-    "dev": "father dev",
-    "build": "father build",
-    "build:deps": "father prebundle",
-    "prepublishOnly": "father doctor && npm run build",
+    "dev": "turbo run dev --parallel --filter=@yooco/storybook",
+    "dev:ui": "turbo run dev --parallel --filter=@yooco/ui",
+    "build": "turbo run build",
+    "build:ui": "turbo run build --filter=@yooco/ui",
     "lint": "eslint --cache --ext .js,.jsx,.ts,.tsx  --fix --format=pretty ./packages && npm run lint:prettier && npm run check-deps",
     "lint:prettier": "npm run prettier &&  git diff && prettier --version && prettier --check \"packages/**/**.{js,jsx,tsx,ts,less,md,json}\" --end-of-line auto",
     "format": "prettier --write \"**/*.+(js|jsx|ts|tsx|json|md|mdx)\" --loglevel warn",
     "re-install": "pnpm run clean & pnpm install",
-    "clean": "rm -rf ./node_modules ./dist ./es ./lib",
-    "build:npm": "npm run clean && npm run build",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "clean": "pnpm clean:node-modules & rm dist ./pnpm-lock.yaml ./yarn.lock -rf",
+    "clean:node-modules": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' +",
+    "build:npm": "npm run clean && npm run build"
   },
   "keywords": [
     "ui",
@@ -75,15 +74,6 @@
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
     "@emotion/core": "^11.0.0",
-    "@storybook/addon-essentials": "^7.5.1",
-    "@storybook/addon-interactions": "^7.5.1",
-    "@storybook/addon-links": "^7.5.1",
-    "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/blocks": "^7.5.1",
-    "@storybook/react": "^7.5.1",
-    "@storybook/react-webpack5": "^7.5.1",
-    "@storybook/testing-library": "^0.2.2",
-    "@storybook/addon-docs": "7.5.0",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.5.0",
     "@types/prettier": "^2.7.3",
@@ -110,7 +100,6 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^7.5.1",
     "stylelint": "^14.16.1",
     "stylelint-config-prettier": "^9.0.4",
     "stylelint-config-recommended": "^9.0.0",
@@ -118,5 +107,8 @@
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-order": "^6.0.1",
     "stylelint-processor-styled-components": "^1.10.0"
+  },
+  "volta": {
+    "node": "18.18.2"
   }
 }
