--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,11 +1,8 @@
 {
-  "extends": "./dev-config/ts-config/ts-config.json",
+  "extends": "../../dev-config/ts-config/ts-config.json",
   "paths": {
     "@/*": [
-      "packages/*"
-    ],
-    "@dev/*": [
-      "dev-config/*"
+      "src/*"
     ],
     "~/*": [
       "*"
@@ -17,3 +14,4 @@
     "**/*.json"
   ]
 }
+
